--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- First row -->
     <div class="row row1">
+      <h3>Clouds,The Mornings And The Sunsets!!!</h3>
       <marquee class="marquee" behavior="scroll" direction="left">
         <div class="images-wrapper">
           <div class="image-box">
@@ -33,6 +34,7 @@
 
     <!-- Second row -->
     <div class="row row2">
+      <h3>Buildings And Scrappers</h3>
       <marquee class="marquee" behavior="scroll" direction="right">
         <div class="images-wrapper">
           <div class="image-box">
@@ -50,6 +52,7 @@
 
     <!-- Third row -->
     <div class="row row3">
+      <h3>Flora And Fauna</h3>
       <marquee class="marquee" behavior="scroll" direction="left">
         <div class="images-wrapper">
           <div class="image-box">
@@ -67,6 +70,37 @@
         </div>
       </marquee>
     </div>
+
+     <div class="row row4">
+      <h3>Silhouettes</h3>
+      <marquee class="marquee" behavior="scroll" direction="right">
+        <div class="images-wrapper">
+          <div class="image-box">
+            <img src="./12.jpg" alt="Image 8">
+          </div>
+          <div class="image-box">
+            <img src="./13.jpg" alt="Image 9">
+          </div>
+         
+        </div>
+      </marquee>
+    </div>
+
+     <div class="row row5">
+      <h3> B and Whites</h3>
+      <marquee class="marquee" behavior="scroll" direction="left">
+        <div class="images-wrapper">
+          <div class="image-box">
+            <img src="./14.jpg" alt="Image 8">
+          </div>
+          <div class="image-box">
+            <img src="./15.jpg" alt="Image 9">
+          </div>
+         
+        </div>
+      </marquee>
+    </div>
+
 
   </div>
 </body>
